--- a/index.html
+++ b/index.html
@@ -1,60 +1,50 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.icccn.org/index.html">
 <head>
-<title>AIECN 2024</title>
+<title>AIECN 2025</title>
 <meta http-equiv="content-type" content="text/html; charset=utf-8" />
 <link rel="stylesheet" href="css/main.css" type="text/css" media="screen, projection" />
 </head>
 <body>
 <div class="container">
-  <img src="AIOT.jpg" alt="https://www.gohawaii.com/islands/oahu/regions/honolulu" style="width:100%;">
+  <img src="ICCCN2025.jpg" alt="https://www.gohawaii.com/islands/oahu/regions/honolulu" style="width:100%;">
   <!--<div class="top-left">AFEC 2020</div>-->
-  <div class="centered"><font size="20" color="#575F96">AIECN 2024</font></div>
+  <div class="centered"><font size="18" color="#575F96">AIECN 2025</font></div>
 </div>
 <div id="outer-wrapper">
 	<div id="inner-wrapper">
 		<div id="content-wrapper">
 			<div id="content">
 
-				<h1>The 1st International Workshop on Artificial Intelligence Empowered Communication and Networking (AIECN 2024)</h1>
+				<h1>The 2nd International Workshop on Artificial Intelligence Empowered Communication and Networking (AIECN 2025)</h1>
 				<br>
-				<h2>In conjunction with the 33rd International Conference on Computer Communications and Networks (ICCCN 2024)</h2>
-				<h2>July 29-31, 2024</h2>
+				<h2>In conjunction with the 34th International Conference on Computer Communications and Networks (ICCCN 2025)</h2>
+				<h2>TBD, 2025</h2>
 				<br>
 				<br>
 				<hr class="style17">
 				<br>
 				<br>
 					<h2>THE WORKSHOP SCOPE</h2>
-						<p>Emerging artificial intelligence (AI)-enabled Internet of Things (IoT) networking technologies potentially provide the promise of revolutionising the way we live, work, and manufacture, which includes Industry 4.0 and smart spaces (i.e., smart buildings, smart homes, etc） and automatic driving and smart city, etc. With the continued miniaturisation of smart devices and an exceptional amount of connectivity among smart devices, IoT networks will generate huge volumes of data to be analysed, transmitted, and processed, which will require higher reliability, lower latency, and scalability, which result in spectrum utilisation, resource allocation, and security perception in wireless access more sophisticated. Nonetheless, AI-enabled edge intelligence and space-air-terrestrial integrated network systems have been proposed to mitigate the heavy burden on the IoT network due to the centralised processing and storing of the massive IoT data. It is relatively novel to use AI-enabled radio and coexistence technologies to promise solutions to make the spectrum users have the ability to be self-adaptive, self-managed, and truly cognitive across all ranges of the spectrum among wireless communication systems, sensing systems, and future-generation systems in IoT. The aim of this workshop is to bring together and disseminate state-of-the-art research contributions that address various aspects of analysis, RF/antenna design, network performance optimisation, implementation, standardisation, and applications of AIenabled communication and networking. The topics of interest include but are not limited to:</p>
+						<p>The advent of Artificial Intelligence (AI)-enhanced Internet of Things (IoT) networking technologies, including Industry 4.0, smart spaces, autonomous driving, and smart cities, heralds a transformative era with the potential to revolutionize our daily living, professional endeavours, and manufacturing processes. Concurrently, as communication technologies and the user base expand exponentially, the integration of space, air, and ground networks emerges as a pivotal force in the drive for innovation. Within this dynamic setting, the synthesis of sensing, communications, and computing across space, air, ground, and maritime domains ushers in a wealth of opportunities paired with formidable challenges. The workshop's central goal is to gather and propagate the latest research findings, addressing a spectrum of issues related to analysis, radio frequency (RF) systems design, network performance optimization, deployment, standardization, and the application of AI-driven communication and networking solutions. As smart devices continue to shrink and their interconnectivity grows ever more robust, Space-Air-Ground-Sea (SAGS) networks are poised to generate an immense volume of data requiring analysis, transmission, and processing. This necessitates enhanced reliability, reduced latency, and scalable solutions, further complicating the intricacies of spectrum utilization, resource allocation, and security in wireless access. However, AI-empowered edge intelligence and the integration of SAGS networks are being advanced as strategies to alleviate the onerous demands on IoT networks stemming from centralized processing and storage of vast IoT data. The adoption of AI-empowered radio and coexistence technologies represents a novel approach, promising to empower spectrum users with self-adaptation, self-management, and true cognitive capabilities across the entire spectrum of wireless communication, sensing, and future IoT systems. The topics of interest include but are not limited to:</p>
 
 						<ul>
-							<li>AI-Enabled UAVs and Space-Air-Terrestrial Integrated Networks</li>
-							<li>AI and Machine Learning for IoT</li>
-							<li>AI for Satellite and Deep Space Communications</li>
-							<li>AI for Network Sensing and Localisation</li>
+							<li>AI-Empowered Space-Air-Ground-Sea Integrated Networks</li>
+							<li>AI-Empowered Sensing, Communications, and Computing Integrated Networks</li>
+							<li>AI-Empowered Joint Communication, Computing, and Sensing in SAGS</li>
+							<li>AI-Empowered Network Sensing and Localization</li>
 							<li>AI for Blockchain-Enabled Networking</li>
-							<li>AI for Digital Twin-based Communication and Networking</li>
+							<li>AI for Digital Twin-Enabled Networking</li>
 							<li>AI for E-health and Mobile Health Networking</li>
 							<li>AI for Fog/Edge/Cloud Networks</li>
-							<li>AI for Vehicular-to-Everything (V2X) Communications and Networking</li>
-							<li>AI-Enabled Networking Interference Management, Resource Allocation</li>
-							<li>AI-Enabled Cooperative Communications and Networking</li>
-							<li>Passive/Active RF Design for Wireless Power Transmission/Energy Harvesting</li>
-							<li>RF and Microwave Substrate Integrated Antennas and Passive Circuits</li>
-							<li>Theory, Design, and Applications of Metasurfaces</li>
-							<li>Microwave Metamaterials and Metasurfaces for Antenna Engineering</li>
-							<li>Recent Advances of Antenna Techniques for 5G or 6G</li>
+							<li>AI-Enabled Networking Interference Management, Resource Allocation Management</li>
+							<li>AI for Passive/Active RF Systems Design</li>
+							<li>AI for RF and Microwave Substrate Integrated Antennas and Passive Circuits</li>
+							<li>AI for Recent Advances of Antenna Techniques for 5G/6G</li>
 							<li>AI and Sensor Array and Multichannel Signal Processing</li>
-							<li>MIMO Communications and Signal Processing</li>
-							<li>Wi-Fi Sensing/Positioning/Detection for Joint Communication and Sensing</li>
-							<li>Intelligent Data Analysis for Networked Systems</li>
+							<li>AI-enabled MIMO Communications and Signal Processing</li>
 							<li>AI for Human Interactions with Multi-Agent Systems (MAS) or Multi-Robot Systems (MRS)</li>
-							<li>AI for Network Architecture Design and Optimization</li>
-							<li>AI for Integrated Communication and Computing Service Provision</li>
-							<li>AI for Security Aspects and Considerations for Integrated Networks</li>
-							<li>AI for Network Virtualization and Automation</li>
-							<li>AI for Energy Efficiency Optimisation for Integrated Networks</li>
+							<li>AI-Empowered Computer and Networking Security</li>
 						</ul>
 		 
 				<br>
@@ -66,32 +56,31 @@
 					<p>PROGRAM CHAIRS</p>
 						<ul>
 						<li>Bintao Hu, Xi'an Jiaotong-Liverpool University, China</li>
-						<li>Yuan Gao, Shanghai University, China</li>						
+						<li>Yuan Gao, Shanghai University, China</li>	
+						<li>Hengyan Liu, Xi'an Jiaotong-Liverpool University, China</li>	
 						</ul>
 					<p>TECHNICAL PROGRAM COMMITTEE (Listed by Name)</p>
 						<ul>
 						<li>Lyuwei Chen, University of Liverpool, UK</li>
-						<li>Jianbo Du, Xi'an University of Posts & Telecommunications, China</li>
-						<li>Tianhong Dai, University of Aberdeen, UK</li>
-						<li>Haonan Hu, Chongqing University of Posts and Telecommunications, China</li>
-						<li>Dongyao Jia, Xi'an Jiaotong-Liverpool University, China</li>
-						<li>Hengyan Liu, Xi'an Jiaotong-Liverpool University, China</li>
+						<li>Yuming Han, Texas A&M University, US</li>
+						<li>Shuangyao Huang, Xi’an Jiaotong-Liverpool University, China</li>
+						<li>Chang Liu, Guangdong University of Technology, China</li>
 						<li>Weibo Liu, Brunel University London, UK</li>
-						<li>Rui Pei, Donghua University, China</li>
+						<li>Rui Pei, Donghua University, Chinaa</li>
 						<li>Na Tang, The University of Sheffield, UK</li>
 						<li>Jingcheng Wang, Xi’an Jiaotong-Liverpool University, China</li>
-						<li>Yunbai Wang, The University of Sheffield, UK</li>
 						<li>Zhengyu Wan, Shenzhen MSU-BIT University, China</li>
-						<li>Sheng Yuan, Renesas Electronics (Shanghai) Co., Ltd, China</li>
 						<li>Xiantao Yang, University of Liverpool, UK</li>
-						<li>Jasmine Kah Phooi SENG, Xi’an Jiaotong-Liverpool University, China</li>
-						<li>Jinyao Zhang, University of Liverpool, UK</li>
+						<li>Sheng Yuan, Renesas Electronics (Shanghai) Co., Ltd, China</li>
+						<li>Hao Zhang, Northwestern Polytechnical University, China</li>
 						<li>Junwei Zhang, Communication University of China, China</li>
-						<li>Wenzhang Zhang, Xi'an Jiaotong-Liverpool University, China</li>					
+						<li>Jinyao Zhang, Shenzhen University, China</li>
+						<li>Shanshan Zhao, University of Shanghai for Science and Technology, China</li>
+						<li>Wenzhang Zhang, Xi’an Jiaotong-Liverpool University, China</li>
 						<li>Xuanming Zhang, Xi'an University of Posts & Telecommunications, China</li>
-						<li>Zitian Zhang, Zhejiang Gongshang University, China</li>
+						<li>Zejian Zhou, University of Wyoming, US</li>					
 						</ul>
-					<p>If you have any questions about this workshop, please contact the following email addresses: Bintao.Hu@xjtlu.edu.cn and gaoyuansie@shu.edu.cn.</p>
+					<p>If you have any questions about this workshop, please contact the following email addresses: Bintao.Hu@xjtlu.edu.cn, gaoyuansie@shu.edu.cn, and Hengyan.Liu@xjtlu.edu.cn</p>
 				<br>
 				<br>
 				<hr class="style17">
@@ -113,10 +102,10 @@
 				<br>
 					<h2>REVIEW AND PUBLICATION OF MANUSCRIPTS</h2>
 						<p>Submitted papers will be reviewed by the workshop program committee and judged on originality, technical correctness, relevance, and quality of presentation. 
-						An accepted paper must be presented at the ICCCN 2024 venue by one of the authors registered at the full registration rate. 
+						An accepted paper must be presented at the ICCCN 2025 venue by one of the authors registered at the full registration rate. 
 						Each workshop registration covers up to two workshop papers by an author. 
 						Accepted and presented papers will be published in the ICCCN proceedings and submitted to Abstracting and Indexing (A&I) databases.  
-						ICCCN 2024 reserves the right to exclude a paper from distribution after the conference, including any Digital Library if the paper <b>is not presented</b> by the author at the conference.</p>
+						ICCCN 2025 reserves the right to exclude a paper from distribution after the conference, including any Digital Library if the paper <b>is not presented</b> by the author at the conference.</p>
 				
 				<br>
 				<br>
@@ -125,21 +114,21 @@
 				<br>
 					<h2>THE IMPORTANT DATES FOR THE WORKSHOPS</h2>
 						<ul>
-						<li>Papers submission: March 4th, 2024，<b><p style="color: red;">EXTENDED: March, 29th, 2024 (<b>Hard Deadline</b>) </p></b></li>
-						<li>Notification of acceptance: <b>April 26th, 2024</b></li>
-						<li>Camera-ready paper due: <b>May 10th, 2024</b>(<b>Hard Deadline</b>)</li>
-						<li>Workshop date: July 31st, 2024.</li>
+						<li>Papers submission: TBD</li>
+						<li>Notification of acceptance: <b>TBD</b></li>
+						<li>Camera-ready paper due: <b>TBD</b>(<b>Hard Deadline</b>)</li>
+						<li>Workshop date: TBD.</li>
 						</ul>
 				<br>
 				<br>
 				<hr class="style17">
 				<br>
 				<br>
-					<h2>ICCCN 2024 PAPER SUBMISSION TERMS AND CONDITIONS</h2>
+					<h2>ICCCN 2025 PAPER SUBMISSION TERMS AND CONDITIONS</h2>
 						<ul>
-						<li>Authors declare that the submission is original and has not been submitted to other venue or under consideration by other venues.</li>
-						<li>Paper titles and/or author names cannot be changed and/or added to the papers once papers are submitted to ICCCN 2024 for review and in the final camera-ready manuscript.</li>
-						<li>If the paper is accepted, at least one of the authors must register at full rate and present it in person at the conference. Accepted and paid paper(s) but not presented onsite by the registered author(s) (for any reason, including visa issues, travel problems, etc.) will be published in the conference proceedings only. We strongly encourage that all authors of accepted papers apply for entry visa to USA in case one author cannot get the entry visa.</li>
+						<li>Authors declare that the submission is original and has not been submitted to other venues or under consideration by other venues.</li>
+						<li>Paper titles and/or author names cannot be changed and/or added to the papers once papers are submitted to ICCCN 2025 for review and in the final camera-ready manuscript.</li>
+						<li>If the paper is accepted, at least one of the authors must register at full rate and present it in person at the conference. Accepted and paid paper(s) but not presented onsite by the registered author(s) (for any reason, including visa issues, travel problems, etc.) will be published in the conference proceedings only. We strongly encourage all authors of accepted papers to apply for an entry visa to Japan in case one author cannot get the entry visa.</li>
 						</ul>		
 				<br>
 				<br>
@@ -148,14 +137,14 @@
 				<br>
 					<h2>REGISTRATION</h2>
 						<p>Please note that at least one author of each accepted paper needs to register and present the paper at the workshop.</p>
-						<p>Please refer to the main conference <a href="http://www.icccn.org/icccn24/index.html">ICCCN 2024</a> for registration information.</p>
+						<p>Please refer to the main conference <a href="http://www.icccn.org/icccn24/index.html">ICCCN 2025</a> for registration information.</p>
 				<br>
 				<br>
 				<hr class="style17">
 				<br>
 				<br>
 					<h2>CONFERENCE VENUE</h2>
-						<p>Please refer to the main conference <a href="http://www.icccn.org/icccn24/index.html">ICCCN 2024</a> for hotel and local information.</p>
+						<p>Please refer to the main conference <a href="http://www.icccn.org/icccn24/index.html">ICCCN 2025</a> for hotel and local information.</p>
 				<br>
 				<br>
 
