--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 				<br>
 				<br>
 					<h2>THE WORKSHOP SCOPE</h2>
-						<p>The advent of Artificial Intelligence (AI)-enhanced Internet of Things (IoT) networking technologies, including Industry 4.0, smart spaces, autonomous driving, and smart cities, heralds a transformative era with the potential to revolutionize our daily living, professional endeavours, and manufacturing processes. Concurrently, as communication technologies and the user base expand exponentially, the integration of space, air, and ground networks emerges as a pivotal force in the drive for innovation. Within this dynamic setting, the synthesis of sensing, communications, and computing across space, air, ground, and maritime domains ushers in a wealth of opportunities paired with formidable challenges. The workshop's central goal is to gather and propagate the latest research findings, addressing a spectrum of issues related to analysis, radio frequency (RF) systems design, network performance optimization, deployment, standardization, and the application of AI-driven communication and networking solutions. As smart devices continue to shrink and their interconnectivity grows ever more robust, Space-Air-Ground-Sea (SAGS) networks are poised to generate an immense volume of data requiring analysis, transmission, and processing. This necessitates enhanced reliability, reduced latency, and scalable solutions, further complicating the intricacies of spectrum utilization, resource allocation, and security in wireless access. However, AI-empowered edge intelligence and the integration of SAGS networks are being advanced as strategies to alleviate the onerous demands on IoT networks stemming from centralized processing and storage of vast IoT data. The adoption of AI-empowered radio and coexistence technologies represents a novel approach, promising to empower spectrum users with self-adaptation, self-management, and true cognitive capabilities across the entire spectrum of wireless communication, sensing, and future IoT systems. The topics of interest include but are not limited to:</p>
+						<p>The advent of Artificial Intelligence (AI)-enhanced Internet of Things (IoT) networking technologies, including Industry 4.0, smart spaces, autonomous driving, and smart cities, heralds a transformative era with the potential to revolutionize our daily living, professional endeavours, and manufacturing processes. Concurrently, as communication technologies and the user base expand exponentially, the integration of space, air, ground, and sea networks emerges as a pivotal force in the drive for innovation. Within this dynamic setting, the synthesis of sensing, communications, and computing across space, air, ground, and maritime domains ushers in a wealth of opportunities paired with formidable challenges. The workshop's central goal is to gather and propagate the latest research findings, addressing a spectrum of issues related to analysis, radio frequency (RF) systems design, network performance optimization, deployment, standardization, and the application of AI-driven communication and networking solutions. As smart devices continue to shrink and their interconnectivity grows ever more robust, Space-Air-Ground-Sea (SAGS) networks are poised to generate an immense volume of data requiring analysis, transmission, and processing. This necessitates enhanced reliability, reduced latency, and scalable solutions, further complicating the intricacies of spectrum utilization, resource allocation, and security in wireless access. However, AI-empowered edge intelligence and the integration of SAGS networks are being advanced as strategies to alleviate the onerous demands on IoT networks stemming from centralized processing and storage of vast IoT data. The adoption of AI-empowered radio and coexistence technologies represents a novel approach, promising to empower spectrum users with self-adaptation, self-management, and true cognitive capabilities across the entire spectrum of wireless communication, sensing, and future IoT systems. The topics of interest include but are not limited to:</p>
 
 						<ul>
 							<li>AI-Empowered Space-Air-Ground-Sea Integrated Networks</li>
@@ -42,9 +42,10 @@
 							<li>AI for RF and Microwave Substrate Integrated Antennas and Passive Circuits</li>
 							<li>AI for Recent Advances of Antenna Techniques for 5G/6G</li>
 							<li>AI and Sensor Array and Multichannel Signal Processing</li>
-							<li>AI-enabled MIMO Communications and Signal Processing</li>
+							<li>AI-Enabled MIMO Communications and Signal Processing</li>
 							<li>AI for Human Interactions with Multi-Agent Systems (MAS) or Multi-Robot Systems (MRS)</li>
 							<li>AI-Empowered Computer and Networking Security</li>
+							<li>AI-Empowered Vehicle Networking and Autonomous Systems</li>
 						</ul>
 		 
 				<br>
@@ -116,8 +117,8 @@
 						<ul>
 						<li>Papers submission: TBD</li>
 						<li>Notification of acceptance: <b>TBD</b></li>
-						<li>Camera-ready paper due: <b>TBD</b>(<b>Hard Deadline</b>)</li>
-						<li>Workshop date: TBD.</li>
+						<li>Camera-ready paper due: <b>TBD</b> (<b>Hard Deadline</b>)</li>
+						<li>Workshop date: TBD</li>
 						</ul>
 				<br>
 				<br>
