--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
 						<li>Chang Liu, Guangdong University of Technology, China</li>
 						<li>Weibo Liu, Brunel University London, UK</li>
 						<li>Rui Pei, Donghua University, Chinaa</li>
+						<li>Guangyu Ren, Xi’an Jiaotong-Liverpool University, China</li>
 						<li>Na Tang, The University of Sheffield, UK</li>
 						<li>Jingcheng Wang, Xi’an Jiaotong-Liverpool University, China</li>
 						<li>Zhengyu Wan, Shenzhen MSU-BIT University, China</li>
