--- a/index.html
+++ b/index.html
@@ -95,8 +95,18 @@
 				<hr class="style17">
 				<br>
 				<br>
+				<hr class="style17">
+				<br>
+				<br>
+					<h2>KEYNOTE SPEAKER: Prof. Jianbo DU (School of Communication and Information Engineering, Xi' an University of Posts and Telecommunications)</h2>
+					<h2>TOPIC: TBD</h2>
+				<br>
+				<br>				
+				<hr class="style17">
+				<br>
+				<br>
 					<h2>INSTRUCTIONS FOR AUTHORS</h2>
-						<p>Submitted manuscripts must be formatted in standard IEEE camera-ready format (double-column, 10-pt font) and must be submitted via EDAS (http://edas.info/) as PDF files (formatted for 8.5x11-inch paper). The manuscripts should be no longer than <b> 6 pages </b>. Submitted papers cannot have been previously published in or be under consideration for publication in another journal or conference. The workshop program committee reserves the right to not review papers that either exceed the length specification or have been submitted or published elsewhere. Submissions must include a title, abstract, keywords, author(s) and affiliation(s) with postal and e-mail address(es). </p>			
+						<p>Submitted manuscripts must be formatted in standard IEEE camera-ready format (double-column, 10-pt font) and must be submitted via link (TBD) as PDF files (formatted for 8.5x11-inch paper). The manuscripts should be no longer than <b> 6 pages </b>. Submitted papers cannot have been previously published in or be under consideration for publication in another journal or conference. The workshop program committee reserves the right to not review papers that either exceed the length specification or have been submitted or published elsewhere. Submissions must include a title, abstract, keywords, author(s) and affiliation(s) with postal and e-mail address(es). </p>			
 				<br>
 				<br>
 				<hr class="style17">
@@ -116,9 +126,9 @@
 				<br>
 					<h2>THE IMPORTANT DATES FOR THE WORKSHOPS</h2>
 						<ul>
-						<li>Papers submission: TBD</li>
-						<li>Notification of acceptance: <b>TBD</b></li>
-						<li>Camera-ready paper due: <b>TBD</b> (<b>Hard Deadline</b>)</li>
+						<li>Papers submission: March 1, 2025</li>
+						<li>Notification of acceptance: <b>May 10, 2025</b></li>
+						<li>Camera-ready paper due: <b>June 2, 2025</b> (<b>Hard Deadline</b>)</li>
 						<li>Workshop date: TBD</li>
 						</ul>
 				<br>
@@ -139,14 +149,14 @@
 				<br>
 					<h2>REGISTRATION</h2>
 						<p>Please note that at least one author of each accepted paper needs to register and present the paper at the workshop.</p>
-						<p>Please refer to the main conference <a href="http://www.icccn.org/icccn24/index.html">ICCCN 2025</a> for registration information.</p>
+						<p>Please refer to the main conference <a href="http://www.icccn.org/index.html">ICCCN 2025</a> for registration information.</p>
 				<br>
 				<br>
 				<hr class="style17">
 				<br>
 				<br>
 					<h2>CONFERENCE VENUE</h2>
-						<p>Please refer to the main conference <a href="http://www.icccn.org/icccn24/index.html">ICCCN 2025</a> for hotel and local information.</p>
+						<p>Please refer to the main conference <a href="href="http://www.icccn.org/index.html">ICCCN 2025</a> for hotel and local information.</p>
 				<br>
 				<br>
 
