--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 				<h1>The 2nd International Workshop on Artificial Intelligence Empowered Communication and Networking (AIECN 2025)</h1>
 				<br>
 				<h2>In conjunction with the 34th International Conference on Computer Communications and Networks (ICCCN 2025)</h2>
-				<h2>TBD, 2025</h2>
+				<h2>August 4 - 7, 2025, Tokyo, Japan</h2>
 				<br>
 				<br>
 				<hr class="style17">
