--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
 					<p>TECHNICAL PROGRAM COMMITTEE (Listed by Name)</p>
 						<ul>
 						<li>Lyuwei Chen, University of Liverpool, UK</li>
+						<li>Hadyan Hafizh, Sunway University, Malaysia</li>
 						<li>Yuming Han, Texas A&M University, US</li>
 						<li>Shuangyao Huang, Xi’an Jiaotong-Liverpool University, China</li>
 						<li>Chang Liu, Guangdong University of Technology, China</li>
