--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 				<br>
 				<br>
 				
-					<h2>KEYNOTE SPEAKER: Prof. Jianbo DU (School of Communication and Information Engineering, Xi' an University of Posts and Telecommunications)</h2>
+					<h2>KEYNOTE SPEAKER: Prof. Jianbo DU (School of Communication and Information Engineering, Xi'an University of Posts and Telecommunications)</h2>
 					<h2>TOPIC: TBD</h2>
 				<br>
 				<br>				
@@ -105,7 +105,7 @@
 				<br>
 				<br>
 					<h2>INSTRUCTIONS FOR AUTHORS</h2>
-						<p>Submitted manuscripts must be formatted in standard IEEE camera-ready format (double-column, 10-pt font) and must be submitted via link (TBD) as PDF files (formatted for 8.5x11-inch paper). The manuscripts should be no longer than <b> 6 pages </b>. Submitted papers cannot have been previously published in or be under consideration for publication in another journal or conference. The workshop program committee reserves the right to not review papers that either exceed the length specification or have been submitted or published elsewhere. Submissions must include a title, abstract, keywords, author(s) and affiliation(s) with postal and e-mail address(es). </p>			
+						<p>Submitted manuscripts must be formatted in standard IEEE camera-ready format (double-column, 10-pt font) and must be submitted via EasyChair link (<a href="https://easychair.org/conferences/?conf=icccn2025">ICCCN 2025</a>) as PDF files (formatted for 8.5x11-inch paper). The manuscripts should be no longer than <b> 6 pages </b>. Submitted papers cannot have been previously published in or be under consideration for publication in another journal or conference. The workshop program committee reserves the right to not review papers that either exceed the length specification or have been submitted or published elsewhere. Submissions must include a title, abstract, keywords, author(s) and affiliation(s) with postal and e-mail address(es). </p>			
 				<br>
 				<br>
 				<hr class="style17">
