--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
 						<li>Guangyu Ren, Xi’an Jiaotong-Liverpool University, China</li>
 						<li>Na Tang, The University of Sheffield, UK</li>
 						<li>Jingcheng Wang, Xi’an Jiaotong-Liverpool University, China</li>
+						<li>Yue Wu, East China University of Science and Technology, China</li>	
 						<li>Zhengyu Wan, Shenzhen MSU-BIT University, China</li>
 						<li>Xiantao Yang, University of Liverpool, UK</li>
 						<li>Sheng Yuan, Renesas Electronics (Shanghai) Co., Ltd, China</li>
