--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
 						<li>Na Tang, The University of Sheffield, UK</li>
 						<li>Jingcheng Wang, Xi’an Jiaotong-Liverpool University, China</li>
 						<li>Yue Wu, East China University of Science and Technology, China</li>	
+						<li>Yue Yin, Keio University, Japan</li>
 						<li>Zhengyu Wan, Shenzhen MSU-BIT University, China</li>
 						<li>Xiantao Yang, University of Liverpool, UK</li>
 						<li>Sheng Yuan, Renesas Electronics (Shanghai) Co., Ltd, China</li>
