--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
 							<li>AI and Sensor Array and Multichannel Signal Processing</li>
 							<li>AI-Enabled MIMO Communications and Signal Processing</li>
 							<li>AI for Human Interactions with Multi-Agent Systems (MAS) or Multi-Robot Systems (MRS)</li>
+							<li>AI for Human Interactions with Intelligent Robot Systems</li>
 							<li>AI-Empowered Computer and Networking Security</li>
 							<li>AI-Empowered Vehicle Networking and Autonomous Systems</li>
 						</ul>
@@ -80,6 +81,7 @@
 						<li>Hao Zhang, Northwestern Polytechnical University, China</li>
 						<li>Junwei Zhang, Communication University of China, China</li>
 						<li>Jinyao Zhang, Shenzhen University, China</li>
+						<li>Fan Zhang, Xi'an Jiaotong-Liverpool University, China<\li>
 						<li>Shanshan Zhao, University of Shanghai for Science and Technology, China</li>
 						<li>Wenzhang Zhang, Xi’an Jiaotong-Liverpool University, China</li>
 						<li>Xuanming Zhang, Xi'an University of Posts & Telecommunications, China</li>
