--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 						<li>Hao Zhang, Northwestern Polytechnical University, China</li>
 						<li>Junwei Zhang, Communication University of China, China</li>
 						<li>Jinyao Zhang, Shenzhen University, China</li>
-						<li>Fan Zhang, Xi'an Jiaotong-Liverpool University, China<\li>
+						<li>Fan Zhang, Xi'an Jiaotong-Liverpool University, China</li>
 						<li>Shanshan Zhao, University of Shanghai for Science and Technology, China</li>
 						<li>Wenzhang Zhang, Xi’an Jiaotong-Liverpool University, China</li>
 						<li>Xuanming Zhang, Xi'an University of Posts & Telecommunications, China</li>
